--- a/GrandadAudioPlayer/App.config
+++ b/GrandadAudioPlayer/App.config
@@ -16,6 +16,22 @@
   
             </dependentAssembly>
   
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Unity.Abstractions" publicKeyToken="6d32ff45e0ccc69f" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Quartz" publicKeyToken="f6b8c98a402cc8a4" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.0.7.0" newVersion="3.0.7.0" />
+  
+            </dependentAssembly>
+  
        </assemblyBinding>
   
   </runtime>
