--- a/GrandadAudioPlayer/GrandadAudioPlayer.csproj
+++ b/GrandadAudioPlayer/GrandadAudioPlayer.csproj
@@ -147,6 +147,9 @@
     <Reference Include="Quartz, Version=3.0.7.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
       <HintPath>..\packages\Quartz.3.0.7\lib\net452\Quartz.dll</HintPath>
     </Reference>
+    <Reference Include="Quartz.Unity, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5e6e0db19dcea0c2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Quartz.Unity.3.0.0\lib\net452\Quartz.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=106.5.4.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.106.5.4\lib\net452\RestSharp.dll</HintPath>
     </Reference>
@@ -236,6 +239,7 @@
     <Compile Include="Utils\Updater\UpdaterJob.cs" />
     <Compile Include="ViewModel\AdminViewModel.cs" />
     <Compile Include="ViewModel\DialogsViewModel.cs" />
+    <Compile Include="ViewModel\UnityServiceLocator.cs" />
     <Compile Include="xaml\AdminDialog.xaml.cs">
       <DependentUpon>AdminDialog.xaml</DependentUpon>
     </Compile>
