--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -16,6 +16,7 @@
   <package id="NAudio.Wma" version="1.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
+  <package id="Quartz.Unity" version="3.0.0" targetFramework="net461" />
   <package id="RestSharp" version="106.5.4" targetFramework="net461" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
   <package id="Splat" version="1.6.2" targetFramework="net461" />
