--- a/GrandadAudioPlayer/App.config
+++ b/GrandadAudioPlayer/App.config
@@ -9,6 +9,10 @@
         <assemblyIdentity name="Unity.Container" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.8.13.0" newVersion="5.8.13.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.1.0.431" newVersion="7.1.0.431" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
