--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
   <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.1" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
-  <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
-  <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
-  <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
+  <package id="Prism.Core" version="7.1.0.431" targetFramework="net461" />
+  <package id="Prism.Unity" version="7.1.0.431" targetFramework="net461" />
+  <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
   <package id="Splat" version="1.6.2" targetFramework="net461" />
   <package id="squirrel.windows" version="1.9.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
+  <package id="Unity.Container" version="5.8.13" targetFramework="net461" />
 </packages>
