--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -11,10 +11,13 @@
   <package id="Prism.Unity" version="7.1.0.431" targetFramework="net461" />
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
+  <package id="Quartz.Unity" version="3.0.0" targetFramework="net461" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
   <package id="Splat" version="1.6.2" targetFramework="net461" />
   <package id="squirrel.windows" version="1.9.0" targetFramework="net461" />
-  <package id="Unity" version="4.0.1" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="Unity" version="5.8.13" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
   <package id="Unity.Container" version="5.8.13" targetFramework="net461" />
 </packages>
